# supernova

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  gen.bat
cmake/: assimp.cmake  code_coverage.cmake  compiler_warnings.cmake  cotire.cmake  cotire.cmake.in  glfw.cmake  googletest.cmake  googletest.cmake.in  supernova.cmake  tinyspline.cmake  tinyspline.cmake.in
supernova/: CMakeLists.txt
supernova-lib/: CMakeLists.txt
supernova-lib/include/supernova/: supernova-lib.h
supernova-lib/src/: precompiled.cpp  precompiled.h  supernova.h
supernova-lib/src/engine/: supernova.cpp  supernova.h  vk_framework.cpp  vk_framework.h  window.cpp  window.h
supernova-lib/src/engine/model/: model.cpp  model.h  model_data.h  vertex_data.h
supernova-lib/src/engine/model-loader/: model_loader.cpp  model_loader.h
supernova-lib/src/engine/model_loader/: model_loader.cpp  model_loader.h
supernova-lib/src/engine/vulkan/: vk_buffer.cpp  vk_buffer.h  vk_graphics_pipeline.cpp  vk_graphics_pipeline.h  vk_image.cpp  vk_image.h  vk_image_view.cpp  vk_image_view.h  vk_mem_utils.h  vk_sampler.cpp  vk_sampler.h  vk_shader.cpp  vk_shader.h
supernova-main/: CMakeLists.txt
supernova-main/src/: main.cpp
supernova-tests/: CMakeLists.txt
supernova-tests/res/models/: cube.fbx  no_meshes.fbx
supernova-tests/src/: precompiled.h  tests.cpp
supernova-tests/src/engine/: model_loader.cpp  supernova.cpp
supernova-tests/src/utils/: logger.cpp  singleton.cpp
supernova-utils-lib/: CMakeLists.txt
supernova-utils-lib/include/: logger.h
supernova-utils-lib/logger/: logger.cpp  logger.h
supernova-utils-lib/model_loader/: model_loader.cpp  model_loader.h
supernova-utils-lib/silent-warnings/: begin.h
supernova-utils-lib/src/: logger.cpp
supernova/src/: main.cpp  precompiled.h
supernova/src/engine/: DirectXFramework.cpp  DirectXFramework.h  WindowHandler.cpp  WindowHandler.h  supernova.cpp  supernova.h
supernova/utils/logger/: logger.cpp  logger.h
supernova/utils/math/: Bounds.h  Frustum.cpp  Frustum.h  Mathf.cpp  Mathf.h  Matrix.h  Matrix33.h  Matrix44.h  Plane.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
supernova/utils/silent-warnings/: end.h
supernova/utils/singleton/: singleton.h
